--- a/openscholar/themes/hwpi_vibrant/css/responsive.vibrant.css
+++ b/openscholar/themes/hwpi_vibrant/css/responsive.vibrant.css
@@ -59,6 +59,10 @@
 #menu-bar #block-os-primary-menu a {
     color: #000000 !important;
 }
+#menu-bar #block-os-primary-menu .menuparent ul li a,
+#menu-bar #block-os-primary-menu a.active {
+    color: #FFF !important;
+}
 #menu-bar #block-os-primary-menu a:hover,
 #menu-bar #block-os-primary-menu a:focus{
 	background-color:#24527a!important;
